--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [packages]
-django = "<5"
+django = "==5.*"
 pyattest = "==1.0.*"
 twine = "*"
 
