--- a/Pipfile
+++ b/Pipfile
@@ -3,10 +3,13 @@ name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
 
+[dev-packages]
+twine = "*"
+setuptools = "*"
+
 [packages]
 django = "==5.*"
 pyattest = "==1.*"
-twine = "*"
 black = "*"
 
 [scripts]
